--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "styled-components": "^6.0.7",
+    "sweetalert2": "^11.10.2",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "5.2.2"
   },
   "devDependencies": {
